# PyCaret-Examples

./: .gitignore  README.md  pyproject.toml  run_fixed_notebooks_background.sh  run_notebooks.sh  run_notebooks_background.sh  run_notebooks_clean.sh  run_specific_notebooks.sh
.claude/: settings.local.json
executed_notebooks/: 01_regression_executed.ipynb  02_clustering_executed.ipynb  03_anomaly-detection_executed.ipynb  04_association_executed.ipynb  05_time-series-forecasting_executed.ipynb
notebooks/: 01_regression.ipynb  02_clustering.ipynb  05_time-series-forecasting.ipynb  association.ipynb  clustering.ipynb  regression.ipynb  time-series-forecasting.ipynb
scripts/: README.md  add_auto_download.py  download_datasets.py  optimize_notebooks.py  quick_test.py  run_all_notebooks.py  run_notebooks_papermill.py
